--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
+# .gitmodules
+
+# Copyright (c) Mateusz Jandura. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+
 [submodule "tests/google-test"]
 	path = tests/google-test
 	url = https://github.com/google/googletest.git
