Use presets' `MJMEM_PLATFORM_ARCH` instead of `CMAKE_GENERATOR_PLATFORM` and add `INSTALL_MJMEM` option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,27 @@
 cmake_minimum_required(VERSION 3.21.0)
 project(mjmem_library LANGUAGES CXX)
 
+# check if the MJMEM_PLATFORM_ARCH variable is not defined, if it's undefined,
+# set its value based on the CMAKE_GENERATOR_PLATFORM predefined variable
+if(NOT DEFINED MJMEM_PLATFORM_ARCH)
+    if(CMAKE_GENERATOR_PLATFORM STREQUAL "x64")
+        set(MJMEM_PLATFORM_ARCH "x64")
+    elseif(CMAKE_GENERATOR_PLATFORM STREQUAL "Win32")
+        set(MJMEM_PLATFORM_ARCH "x86") # translate Win32 into x86
+    endif()
+endif()
+
 # check if the platform architecture is supported
-if(NOT CMAKE_GENERATOR_PLATFORM MATCHES "^x64$|^Win32$")
+if(NOT ${MJMEM_PLATFORM_ARCH} MATCHES "^x64$|^x86$")
     message(FATAL_ERROR "The MJMEM library can only be built for x64 and x86 architectures.")
 endif()
 
-option(BUILD_BENCHMARKS "Build MJMEM benchmarks" OFF)
-option(BUILD_TESTS "Build MJMEM tests" OFF)
+option(BUILD_BENCHMARKS "Build MJMEM library benchmarks" OFF)
+option(BUILD_TESTS "Build MJMEM library tests" OFF)
+option(INSTALL_MJMEM "Install MJMEM library" OFF)
+
+# build the MJMEM library before building any benchmarks and tests
+add_subdirectory(src "${CMAKE_BINARY_DIR}/mjmem")
 
 if(BUILD_BENCHMARKS)
     add_subdirectory(benchmarks "${CMAKE_BINARY_DIR}/benchmarks")
@@ -22,5 +36,3 @@ if(BUILD_TESTS)
     enable_testing()
     add_subdirectory(tests "${CMAKE_BINARY_DIR}/tests")
 endif()
-
-add_subdirectory(src)
