--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -33,6 +33,7 @@ function(add_isolated_test test_name test_path)
 endfunction()
 
 add_isolated_test(allocators_compatibility "src/allocators_compatibility/test.cpp")
+add_isolated_test(block_allocator "src/block_allocator/test.cpp")
 add_isolated_test(pool_resource "src/pool_resource/test.cpp")
 add_isolated_test(smart_array "src/smart_array/test.cpp")
 add_isolated_test(smart_ptr "src/smart_ptr/test.cpp")
