--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,18 +21,18 @@ if(NOT ${MJMEM_PLATFORM_ARCH} MATCHES "^x64$|^x86$")
     message(FATAL_ERROR "The MJMEM library can only be built for x64 and x86 architectures.")
 endif()
 
-option(BUILD_BENCHMARKS "Build MJMEM library benchmarks" OFF)
-option(BUILD_TESTS "Build MJMEM library tests" OFF)
-option(INSTALL_MJMEM "Install MJMEM library" OFF)
+option(MJMEM_BUILD_BENCHMARKS "Build MJMEM library benchmarks" OFF)
+option(MJMEM_BUILD_TESTS "Build MJMEM library tests" OFF)
+option(MJMEM_INSTALL_LIBRARY "Install MJMEM library" OFF)
 
 # build the MJMEM library before building any benchmarks and tests
 add_subdirectory(src "${CMAKE_BINARY_DIR}/mjmem")
 
-if(BUILD_BENCHMARKS)
+if(MJMEM_BUILD_BENCHMARKS)
     add_subdirectory(benchmarks "${CMAKE_BINARY_DIR}/benchmarks")
 endif()
 
-if(BUILD_TESTS)
+if(MJMEM_BUILD_TESTS)
     enable_testing()
     add_subdirectory(tests "${CMAKE_BINARY_DIR}/tests")
 endif()
