--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -14,7 +14,7 @@ function(copy_files_required_for_benchmark benchmark_name)
     # copy all required files to the output directory of the specified benchmark
     add_custom_command(TARGET ${benchmark_name} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
-        "${CMAKE_BINARY_DIR}/mjmem/$<CONFIG>/mjmem.dll"
+        "$<TARGET_FILE:mjmem>"
         "$<TARGET_FILE_DIR:${benchmark_name}>"
     )
 endfunction()
@@ -25,7 +25,7 @@ function(add_isolated_benchmark benchmark_name benchmark_path)
     target_compile_definitions(${benchmark_name} PRIVATE BENCHMARK_STATIC_DEFINE)
     target_compile_features(${benchmark_name} PRIVATE cxx_std_20)
     target_include_directories(${benchmark_name} PRIVATE
-        "${CMAKE_SOURCE_DIR}/src"
+        "${CMAKE_CURRENT_SOURCE_DIR}/../src"
         "${benchmark_SOURCE_DIR}/include"
     )
     target_link_libraries(${benchmark_name} PRIVATE benchmark::benchmark mjmem Shlwapi)
