--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,18 +6,18 @@
 cmake_minimum_required(VERSION 3.21.0)
 project(mjmem_library LANGUAGES CXX)
 
-# check if the MJMEM_PLATFORM_ARCH variable is not defined, if it's undefined,
+# check if the MJX_PLATFORM_ARCH variable is not defined, if it's undefined,
 # set its value based on the CMAKE_GENERATOR_PLATFORM predefined variable
-if(NOT DEFINED MJMEM_PLATFORM_ARCH)
+if(NOT DEFINED MJX_PLATFORM_ARCH)
     if(CMAKE_GENERATOR_PLATFORM STREQUAL "x64")
-        set(MJMEM_PLATFORM_ARCH "x64")
+        set(MJX_PLATFORM_ARCH "x64")
     elseif(CMAKE_GENERATOR_PLATFORM STREQUAL "Win32")
-        set(MJMEM_PLATFORM_ARCH "x86") # translate Win32 into x86
+        set(MJX_PLATFORM_ARCH "x86") # translate Win32 into x86
     endif()
 endif()
 
 # check if the platform architecture is supported
-if(NOT ${MJMEM_PLATFORM_ARCH} MATCHES "^x64$|^x86$")
+if(NOT ${MJX_PLATFORM_ARCH} MATCHES "^x64$|^x86$")
     message(FATAL_ERROR "The MJMEM library can only be built for x64 and x86 architectures.")
 endif()
 
