--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -41,3 +41,4 @@ add_isolated_test(test_smart_array "src/smart_array/test.cpp")
 add_isolated_test(test_smart_ptr "src/smart_ptr/test.cpp")
 add_isolated_test(test_unique_smart_array "src/unique_smart_array/test.cpp")
 add_isolated_test(test_unique_smart_ptr "src/unique_smart_ptr/test.cpp")
+add_isolated_test(test_version_encoding "src/version_encoding/test.cpp")
