Add `reference_counter` test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -37,6 +37,7 @@ add_isolated_test(test_block_allocator "src/block_allocator/test.cpp")
 add_isolated_test(test_global_allocator "src/global_allocator/test.cpp")
 add_isolated_test(test_pool_allocator "src/pool_allocator/test.cpp")
 add_isolated_test(test_pool_resource "src/pool_resource/test.cpp")
+add_isolated_test(test_reference_counter "src/reference_counter/test.cpp")
 add_isolated_test(test_smart_array "src/smart_array/test.cpp")
 add_isolated_test(test_smart_ptr "src/smart_ptr/test.cpp")
 add_isolated_test(test_unique_smart_array "src/unique_smart_array/test.cpp")
