Optimize `block_allocator`'s internal bitmap

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -32,5 +32,6 @@ function(add_isolated_benchmark benchmark_name benchmark_path)
     copy_files_required_for_benchmark(${benchmark_name})
 endfunction()
 
+add_isolated_benchmark(benchmark_bitops "src/bitops/benchmark.cpp")
 add_isolated_benchmark(benchmark_block_allocator "src/block_allocator/benchmark.cpp")
 add_isolated_benchmark(benchmark_pool_allocator "src/pool_allocator/benchmark.cpp")
