Temporarily disable `bitops` and `block_allocator` tests and benchmarks

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -32,6 +32,10 @@ function(add_isolated_benchmark benchmark_name benchmark_path)
     copy_files_required_for_benchmark(${benchmark_name})
 endfunction()
 
-add_isolated_benchmark(benchmark_bitops "src/bitops/benchmark.cpp")
-add_isolated_benchmark(benchmark_block_allocator "src/block_allocator/benchmark.cpp")
+# Note: The 'bitops' and 'block_allocator' benchmarks are currently blocked until endianness
+#       support is added to the library. This is because these tests rely on direct bit
+#       manipulation, which is not supported in the current Linux implementation.
+
+# add_isolated_benchmark(benchmark_bitops "src/bitops/benchmark.cpp")
+# add_isolated_benchmark(benchmark_block_allocator "src/block_allocator/benchmark.cpp")
 add_isolated_benchmark(benchmark_pool_allocator "src/pool_allocator/benchmark.cpp")
