--- a/.github/workflows/build-and-test-windows.yml
+++ b/.github/workflows/build-and-test-windows.yml
@@ -32,12 +32,12 @@ jobs:
       - name: Install Ninja
         uses: turtlesec-no/get-ninja@main
 
-      # Note: Unlike Clang and GCC, MSVC requires specific environment variables to be set for its tools
-      #       to be properly found and used. This configuration ensures that the MSVC tools' paths are
-      #       correctly recognized. If these environment variables are not set, the MSVC tools may not
-      #       be found or used correctly, even if they are installed on the system.
-      - name: Setup environment
-        if: ${{ matrix.compiler == 'MSVC' }}
+      # Note: Unlike GCC, Clang (with the MSVC toolchain) and MSVC require specific environment variables to
+      #       be set for their tools to be properly found and used. This configuration ensures that the MSVC
+      #       tools' paths are correctly recognized. If these environment variables are not set,
+      #       the MSVC tools may not be found or used correctly, even if they are installed on the system.
+      - name: Setup compiler toolchain
+        if: ${{ matrix.compiler == 'Clang' || matrix.compiler == 'MSVC' }}
         uses: ilammy/msvc-dev-cmd@v1
         with:
           arch: ${{ matrix.arch }}
@@ -46,8 +46,8 @@ jobs:
       - name: Configure project (Clang)
         if: ${{ matrix.compiler == 'Clang' }}
         run: >
-          cmake --preset=${{ matrix.arch }} -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_CXX_FLAGS='-target x86_64-pc-windows-gnu'
-          -DMJMEM_BUILD_BENCHMARKS=ON -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
+          cmake --preset=${{ matrix.arch }} -DCMAKE_CXX_COMPILER=clang++ -DMJMEM_BUILD_BENCHMARKS=ON
+          -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
 
       - name: Configure project (GCC)
         if: ${{ matrix.compiler == 'GCC' }}
