Adjust code and scripts for cross-compiling

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -9,11 +9,15 @@ project(mjmem_benchmarks LANGUAGES CXX)
 # build Google Benchmark before building any benchmarks
 set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
 add_subdirectory(google-benchmark "${CMAKE_CURRENT_BINARY_DIR}/google-benchmark" EXCLUDE_FROM_ALL)
+if(WIN32 AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    # suppress -Winvalid-offsetof warning to compile Google Benchmark with Clang on Windows
+    target_compile_options(benchmark PRIVATE -Wno-invalid-offsetof)
+endif()
 
 function(copy_files_required_for_benchmark benchmark_name)
     # copy all required files to the output directory of the specified benchmark
     add_custom_command(TARGET ${benchmark_name} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
         "$<TARGET_FILE:mjmem>"
         "$<TARGET_FILE_DIR:${benchmark_name}>"
     )
@@ -28,14 +32,15 @@ function(add_isolated_benchmark benchmark_name benchmark_path)
         "${CMAKE_CURRENT_SOURCE_DIR}/../src"
         "${benchmark_SOURCE_DIR}/include"
     )
-    target_link_libraries(${benchmark_name} PRIVATE benchmark mjmem Shlwapi)
+    target_link_libraries(${benchmark_name} PRIVATE benchmark mjmem)
+    if(WIN32)
+        # link against Shlwapi.lib, a Windows-specific statically-linked library
+        target_link_libraries(${benchmark_name} PRIVATE Shlwapi)
+    endif()
+
     copy_files_required_for_benchmark(${benchmark_name})
 endfunction()
 
-# Note: The 'bitops' and 'block_allocator' benchmarks are currently blocked until endianness
-#       support is added to the library. This is because these tests rely on direct bit
-#       manipulation, which is not supported in the current Linux implementation.
-
-# add_isolated_benchmark(benchmark_bitops "src/bitops/benchmark.cpp")
-# add_isolated_benchmark(benchmark_block_allocator "src/block_allocator/benchmark.cpp")
+add_isolated_benchmark(benchmark_bitops "src/bitops/benchmark.cpp")
+add_isolated_benchmark(benchmark_block_allocator "src/block_allocator/benchmark.cpp")
 add_isolated_benchmark(benchmark_pool_allocator "src/pool_allocator/benchmark.cpp")
