--- a/.github/workflows/build-and-test-linux.yml
+++ b/.github/workflows/build-and-test-linux.yml
@@ -36,14 +36,14 @@ jobs:
       - name: Configure project (Clang)
         if: ${{ matrix.compiler == 'Clang' }}
         run: >
-          cmake --preset=${{ matrix.arch }} -DCMAKE_CXX_COMPILER=clang++
+          cmake --preset=${{ matrix.arch }} -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
           -DMJMEM_BUILD_BENCHMARKS=ON -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
 
       - name: Configure project (GCC)
         if: ${{ matrix.compiler == 'GCC' }}
         run: >
-          cmake --preset=${{ matrix.arch }} -DCMAKE_CXX_COMPILER=g++ -DMJMEM_BUILD_BENCHMARKS=ON
-          -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
+          cmake --preset=${{ matrix.arch }} -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++
+          -DMJMEM_BUILD_BENCHMARKS=ON -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
 
       - name: Build project
         run: |
