--- a/.github/workflows/build-and-test-windows.yml
+++ b/.github/workflows/build-and-test-windows.yml
@@ -43,23 +43,31 @@ jobs:
           arch: ${{ matrix.arch }}
           vsversion: 2022
 
-      - name: Configure project (Clang)
-        if: ${{ matrix.compiler == 'Clang' }}
+      - name: Configure project (x64 Clang)
+        if: ${{ matrix.compiler == 'Clang' && matrix.arch == 'x64' }}
         run: >
-          cmake --preset=${{ matrix.arch }} -DCMAKE_CXX_COMPILER=clang++ -DMJMEM_BUILD_BENCHMARKS=ON
-          -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
+          cmake --preset=${{ matrix.arch }} -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+          -DCMAKE_C_FLAGS="-target x86_64-pc-windows-msvc" -DCMAKE_CXX_FLAGS="-target x86_64-pc-windows-msvc"
+          -DMJMEM_BUILD_BENCHMARKS=ON -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
+
+      - name: Configure project (x86 Clang)
+        if: ${{ matrix.compiler == 'Clang' && matrix.arch == 'x86' }}
+        run: >
+          cmake --preset=${{ matrix.arch }} -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+          -DCMAKE_C_FLAGS="-target i386-pc-windows-msvc" -DCMAKE_CXX_FLAGS="-target i386-pc-windows-msvc"
+          -DMJMEM_BUILD_BENCHMARKS=ON -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
 
       - name: Configure project (GCC)
         if: ${{ matrix.compiler == 'GCC' }}
         run: >
-          cmake --preset=${{ matrix.arch }} -DCMAKE_CXX_COMPILER=g++ -DMJMEM_BUILD_BENCHMARKS=ON
-          -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
+          cmake --preset=${{ matrix.arch }} -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++
+          -DMJMEM_BUILD_BENCHMARKS=ON -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
 
       - name: Configure project (MSVC)
         if: ${{ matrix.compiler == 'MSVC' }}
         run: >
-          cmake --preset=${{ matrix.arch }} -DCMAKE_CXX_COMPILER=cl -DMJMEM_BUILD_BENCHMARKS=ON
-          -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
+          cmake --preset=${{ matrix.arch }} -DCMAKE_C_COMPILER=cl -DCMAKE_CXX_COMPILER=cl
+          -DMJMEM_BUILD_BENCHMARKS=ON -DMJMEM_BUILD_TESTS=ON -DMJMEM_INSTALL_LIBRARY=ON
 
       - name: Build project
         run: |
