--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -14,15 +14,6 @@ if(WIN32 AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     target_compile_options(benchmark PRIVATE -Wno-invalid-offsetof)
 endif()
 
-function(copy_files_required_for_benchmark benchmark_name)
-    # copy all required files to the output directory of the specified benchmark
-    add_custom_command(TARGET ${benchmark_name} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "$<TARGET_FILE:mjmem>"
-        "$<TARGET_FILE_DIR:${benchmark_name}>"
-    )
-endfunction()
-
 function(add_isolated_benchmark benchmark_name benchmark_path)
     # create an executable for the specified benchmark, linking against necessary libraries
     add_executable(${benchmark_name} ${benchmark_path})
@@ -37,10 +28,22 @@ function(add_isolated_benchmark benchmark_name benchmark_path)
         # link against Shlwapi.lib, a Windows-specific statically-linked library
         target_link_libraries(${benchmark_name} PRIVATE Shlwapi)
     endif()
-
-    copy_files_required_for_benchmark(${benchmark_name})
 endfunction()
 
 add_isolated_benchmark(benchmark_bitops "src/bitops/benchmark.cpp")
 add_isolated_benchmark(benchmark_block_allocator "src/block_allocator/benchmark.cpp")
 add_isolated_benchmark(benchmark_pool_allocator "src/pool_allocator/benchmark.cpp")
+
+# use a custom target to combine all targets into a single one,
+# this allows only one post-build call instead of per-benchmark copying
+add_custom_target(mjmem_and_benchmarks ALL DEPENDS
+    mjmem
+    benchmark_bitops
+    benchmark_block_allocator
+    benchmark_pool_allocator
+)
+add_custom_command(TARGET mjmem_and_benchmarks POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    "$<TARGET_FILE:mjmem>"
+    "${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>" # copy to the benchmarks' output directory
+)
